Fix new Sonar issues