@@ -12,7 +12,7 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.Arrays;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -23,8 +23,8 @@ import static org.mockito.Mockito.when;
 
 class AutologinRequestConverterTest {
 
-  private List<String> jsonMediaType = Arrays.asList(MediaType.APPLICATION_JSON_VALUE);
-  private List<String> htmlMediaType = Arrays.asList(MediaType.APPLICATION_XHTML_XML_VALUE);
+  private final List<String> jsonMediaType = List.of( MediaType.APPLICATION_JSON_VALUE );
+  private final List<String> htmlMediaType = List.of( MediaType.APPLICATION_XHTML_XML_VALUE );
 
   private AutologinRequest autologinRequest;
 
@@ -64,13 +64,23 @@ class AutologinRequestConverterTest {
 
   @Test
   void readInternalFromJson() throws IOException {
-    InputStream inputStream = new ByteArrayInputStream("{ \"username\": \"user\",\"password\": \"pwd\" }".getBytes("utf-8"));
+    InputStream inputStream = new ByteArrayInputStream("{ \"username\": \"user\",\"password\": \"pwd\" }".getBytes( StandardCharsets.UTF_8 ));
     when(httpHeaders.get(HttpHeaders.CONTENT_TYPE)).thenReturn(jsonMediaType);
     when(inputMessage.getBody()).thenReturn(inputStream);
     AutologinRequest autologin = autologinRequestConverter.readInternal(autologinRequest.getClass(), inputMessage);
     assertNotNull(autologin);
     assertEquals("user", autologin.getUsername());
     assertEquals("pwd", autologin.getPassword());
+  }
+
+  @Test
+  void readInternalFromJsonButNull() throws IOException {
+    when(httpHeaders.get(HttpHeaders.CONTENT_TYPE)).thenReturn(jsonMediaType);
+    when(inputMessage.getBody()).thenReturn(null);
+    AutologinRequest autologin = autologinRequestConverter.readInternal(autologinRequest.getClass(), inputMessage);
+    assertNotNull(autologin);
+    assertNull(autologin.getUsername());
+    assertNull(autologin.getPassword());
   }
 
   @Test
@@ -81,6 +91,17 @@ class AutologinRequestConverterTest {
     when(outputMessage.getBody()).thenReturn(outputStream);
     autologinRequest.setPassword("pwd");
     autologinRequest.setUsername("user");
+    autologinRequestConverter.writeInternal(autologinRequest, outputMessage);
+    verify(outputMessage, times(2)).getHeaders();
+    verify(outputMessage, times(1)).getBody();
+  }
+
+  @Test
+  void writeInternalNoValuesInAutoLoginRequest() throws IOException {
+    OutputStream outputStream = mock(OutputStream.class);
+    HttpOutputMessage outputMessage = mock(HttpOutputMessage.class);
+    when(outputMessage.getHeaders()).thenReturn(httpHeaders);
+    when(outputMessage.getBody()).thenReturn(outputStream);
     autologinRequestConverter.writeInternal(autologinRequest, outputMessage);
     verify(outputMessage, times(2)).getHeaders();
     verify(outputMessage, times(1)).getBody();
